--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,5 +1,11 @@
+@import './fonts.css';
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Proxima Nova', sans-serif;
 }
