--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,11 +1,209 @@
 @import './fonts.css';
 
+/* region Settings */
+
+:root {
+  --accent-color: #2f80ed;
+  --on-accent-color: #ffffff;
+  --text-color: #111111;
+  --background-color: #ffffff;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+button {
+  background: none;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  color: var(--text-color);
+}
+
 body {
   font-family: 'Proxima Nova', sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
+
+/* endregion */
+
+/* region Auto scroll text*/
+
+.auto-scroll-text-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.auto-scroll-text {
+  transition: 0.3s;
+  display: inline-block;
+}
+
+.auto-scroll-text.duplicate {
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+.auto-scroll-text--active .auto-scroll-text {
+  transform: translateY(-100%);
+}
+
+/* endregion */
+
+/* region UI */
+
+.button {
+  background-color: var(--accent-color);
+  color: var(--on-accent-color);
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 15px 20px;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.button__text {
+  transition: 0.3s;
+}
+
+.button__icon {
+  color: var(--on-accent-color);
+  width: 12px;
+  height: auto;
+}
+
+.container {
+  width: 100%;
+  padding: 0 40px;
+}
+
+.menu-btn {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.menu-btn__icon {
+  width: 32px;
+  height: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-btn__line {
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color);
+  transition: 0.3s;
+}
+
+.menu-btn:hover .menu-btn__line:first-child {
+  transform: translateY(-2px);
+}
+
+.menu-btn:hover .menu-btn__line:last-child {
+  transform: translateY(2px);
+}
+
+/* endregion */
+
+/* region Header */
+
+.header {
+  padding: 28px 0;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.header .container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+.header__left {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header__logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__logo-link {
+  transition: 0.3s;
+  line-height: 0;
+  cursor: pointer;
+}
+
+.header__logo-link:hover {
+  transform: scale(0.97);
+}
+
+.header__logo-icon {
+  width: 187px;
+  height: auto;
+  color: var(--accent-color);
+}
+
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 40px;
+}
+
+.phone-link {
+  color: var(--text-color);
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.phone-link:hover {
+  color: var(--accent-color);
+}
+
+.callback-button {
+  text-transform: uppercase;
+  color: var(--accent-color);
+  position: relative;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.callback-button:after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  transition: 0.3s;
+  background-color: var(--accent-color);
+}
+
+.callback-button:hover:after {
+  width: 100%;
+}
+
+/* endregion */
