--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -36,6 +36,7 @@ body {
 .auto-scroll-text-container {
   position: relative;
   overflow: hidden;
+  display: inline-block;
 }
 
 .auto-scroll-text {
@@ -267,6 +268,12 @@ body {
   user-select: none;
   pointer-events: none;
   z-index: 1;
+  transition: 0.3s;
+}
+
+.input:focus + .input__label,
+.input:not(:placeholder-shown) + .input__label {
+  transform: translate(-15%, -150%) scale(0.7);
 }
 
 .close {
@@ -380,22 +387,6 @@ body {
   font-size: 13px;
   font-weight: 600;
 }
-
-.callback-button:after {
-  content: '';
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0;
-  height: 2px;
-  transition: 0.3s;
-  background-color: var(--accent-color);
-}
-
-.callback-button:hover:after {
-  width: 100%;
-}
-
 /* endregion */
 
 /* region Banner */
