--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -313,6 +313,43 @@ body {
   z-index: 3;
 }
 
+.video-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 1000;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.video-modal--active {
+  display: block;
+}
+
+.video-modal video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-modal__close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 3;
+}
+
 /* endregion */
 
 /* region Header */
